--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,5 +1,16 @@
-// COLORS
 :root {
+  // цвета
   --color-black: #000;
   --color-white: #fff;
+  --color-eastbay: #484283;
+  --color-accent: #f14f4f;
+
+  // отступы
+  --grid-gap: 20px;
+  --main-offset: 40px;
+
+  // шрифты
+  --font-family: "Intro", sans-serif;
+  --middle-high-font: 700 30px / 140% var(--font-family);
+  --small-font: 400 14px / 140% var(--font-family);
 }
