--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -22,8 +22,9 @@ a {
   text-decoration: none;
 }
 
-ul {
+.list-reset {
   list-style: none;
+  margin: 0;
   padding: 0;
 }
 
@@ -54,6 +55,7 @@ ul {
 
 .btn-reset {
   border: none;
+  padding: 0;
   background: transparent;
   cursor: pointer;
 }
@@ -61,9 +63,15 @@ ul {
 .container {
   margin: 0 auto;
   padding: 0 15px;
-  max-width: 1200px;
+  max-width: 1210px;
 }
 
 .js-focus-visible :focus:not(.focus-visible) {
   outline: none;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  gap: var(--grid-gap);
 }
