второй и третий уроки

--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -75,3 +75,54 @@ a {
   grid-template-columns: repeat(12, 1fr);
   gap: var(--grid-gap);
 }
+
+.btn {
+  border-radius: 4px;
+  padding: 22px 47px;
+  font: var(--middle-regular);
+  transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+
+  &--primary {
+    color: var(--color-white);
+    background-color: var(--color-accent);
+
+    &:hover {
+      background-color: var(--color-accent-hover);
+    }
+  }
+}
+
+.title {
+  margin: 0;
+  margin-bottom: var(--main-offset);
+  font: var(--middle-high-bold);
+  color: var(--color-main);
+}
+
+@import "mixins";
+
+.custom-checkbox {
+  @include custom-checkbox;
+
+  &__content {
+    padding-left: 35px;
+    font: var(--middle-book);
+    color: var(--color-main);
+
+    &::before {
+      top: -3px;
+      border-color: var(--color-cameo);
+      border-radius: 4px;
+      width: 24px;
+      height: 24px;
+    }
+
+    &::after {
+      top: -3px;
+      width: 24px;
+      height: 24px;
+      background-image: url("../img/check.svg");
+      background-size: 15px 12px;
+    }
+  }
+}
