--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,12 +1,13 @@
+
 <section class="hero">
-  <div class="container">
-    <span class="hero__bg-text" aria-hidden="true">SneakMax</span>
+  <span class="hero__bg-text" aria-hidden="true">SneakMax</span>
+  <div class="container hero__container">
     <h1 class="hero__title">
       Кроссовки известных брендов
-      с доставкой по России и СНГ
+      с&nbsp;доставкой по&nbsp;России и&nbsp;СНГ
     </h1>
     <p class="hero__descr">
-      Мы продаем кроссовки брендов Nike, Adidas, Puma, Reebok, Converse и многие другие по низким ценам
+      Мы&nbsp;продаем кроссовки брендов Nike, Adidas, Puma, Reebok, Converse и&nbsp;многие другие по&nbsp;низким ценам
     </p>
     <button class="btn-reset btn btn--primary js-move-to">Перейти к покупкам</button>
   </div>
