--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -1,4 +1,48 @@
 .hero {
-  height: 800px;
+  position: relative;
+  padding: 130px 0;
+  height: 528px;
   background-color: var(--color-eastbay);
+
+  &__container {
+    position: relative;
+    z-index: 5;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    height: 100%;
+  }
+
+  &__bg-text {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    z-index: 0;
+    margin-top: 70px;
+    margin-left: 50px;
+    font-family: "Intro", sans-serif;
+    font-weight: 700;
+    font-size: 200px;
+    line-height: 200px;
+    color: rgba(255, 255, 255, 0.12);
+    transform: translate(-50%, -50%);
+  }
+
+  &__title {
+    margin: 0;
+    margin-top: 50px;
+    margin-bottom: var(--second-offset);
+    max-width: 50%;
+    font: 700 36px / 140% var(--font-family);
+    color: var(--color-white);
+  }
+
+  &__descr {
+    margin: 0;
+    margin-bottom: var(--main-offset);
+    max-width: calc(50% - 100px);
+    font: var(--middle-book);
+    color: var(--color-white);
+  }
 }
