--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -3,55 +3,61 @@
     <h2 class="title catalog__title">Каталог</h2>
     <div class="catalog__content grid">
       <div class="catalog__left">
-        <h3 class="catalog__subtitle">Подбор по&nbsp;параметрам</h3>
-        <div class="catalog__prop">
-          <strong class="catalog__caption">Цена, руб</strong>
-          <div class="catalog-price catalog__prop-inner">
-            <input type="text" class="catalog-price__input">
-            <input type="text" class="catalog-price__input">
-            <div class="catalog-price__element"></div>
+        <div class="catalog-filters">
+          <h3 class="catalog__subtitle">Подбор по&nbsp;параметрам</h3>
+          <div class="catalog__prop">
+            <strong class="catalog__caption">Цена, руб</strong>
+            <div class="catalog-price catalog__prop-inner">
+              <div class="catalog-price__wrapper">
+                <input type="text" class="catalog-price__input" id="input-0">
+                <input type="text" class="catalog-price__input" id="input-1">
+              </div>
+              <div class="catalog-price__element" id="range-slider"></div>
+            </div>
+          </div>
+          <div class="catalog__prop">
+            <strong class="catalog__caption">Пол</strong>
+            <div class="catalog__prop-inner catalog__prop-checkboxes">
+              <label class="custom-checkbox">
+                <input type="checkbox" class="custom-checkbox__field">
+                <span class="custom-checkbox__content">Мужской</span>
+              </label>
+              <label class="custom-checkbox">
+                <input type="checkbox" class="custom-checkbox__field">
+                <span class="custom-checkbox__content">Женский</span>
+              </label>
+            </div>
+          </div>
+          <div class="catalog__prop">
+            <strong class="catalog__caption">Размер</strong>
+            <div class="catalog__prop-inner">
+              <table class="sizes-table">
+                <caption>Таблица размеров</caption>
+                <tbody>
+                  <tr>
+                    <td>35</td>
+                    <td>36</td>
+                    <td>37</td>
+                  </tr>
+                  <tr>
+                    <td>38</td>
+                    <td>39</td>
+                    <td>40</td>
+                  </tr>
+                  <tr>
+                    <td>41</td>
+                    <td>42</td>
+                    <td>43</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+          <div class="catalog-filters__btns">
+            <button class="btn btn-reset catalog__apply btn--secondary">Применить</button>
+            <button class="btn-reset catalog__reset">сбросить</button>
           </div>
         </div>
-        <div class="catalog__prop">
-          <strong class="catalog__caption">Пол</strong>
-          <div class="catalog__prop-inner catalog__prop-checkboxes">
-            <label class="custom-checkbox">
-              <input type="checkbox" class="custom-checkbox__field">
-              <span class="custom-checkbox__content">Мужской</span>
-            </label>
-            <label class="custom-checkbox">
-              <input type="checkbox" class="custom-checkbox__field">
-              <span class="custom-checkbox__content">Женский</span>
-            </label>
-          </div>
-        </div>
-        <div class="catalog__prop">
-          <strong class="catalog__caption">Размер</strong>
-          <div class="catalog__prop-inner">
-            <table class="sizes-table">
-              <caption>Таблица размеров</caption>
-              <tbody>
-                <tr>
-                  <td>35</td>
-                  <td>36</td>
-                  <td>37</td>
-                </tr>
-                <tr>
-                  <td>38</td>
-                  <td>39</td>
-                  <td>40</td>
-                </tr>
-                <tr>
-                  <td>41</td>
-                  <td>42</td>
-                  <td>43</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-        <button class="btn btn-reset btn--secondary">Применить</button>
-        <button class="btn-reset catalog__reset">сбросить</button>
       </div>
       <div class="catalog__grid">
         <ul class="catalog-list list-reset grid">
@@ -245,7 +251,7 @@
             </article>
           </li>
         </ul>
-
+        <button class="catalog__more btn btn-reset btn--primary">Показать еще</button>
       </div>
     </div>
   </div>
