--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,9 +4,11 @@
 @import "./components/header";
 @import "./components/hero";
 @import "./components/catalog";
+@import "./components/about";
 
 // маленькие
 @import "./components/nav";
 @import "./components/cart";
 @import "./components/logo";
 @import "./components/product";
+@import "./components/sizes";
