--- a/src/scss/components/_catalog.scss
+++ b/src/scss/components/_catalog.scss
@@ -3,12 +3,12 @@
 
   &__left {
     grid-column: 3 span;
-    border-radius: 4px;
-    padding: var(--second-offset);
-    background-color: var(--color-bg);
   }
 
   &__grid {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     grid-column: 9 span;
   }
 
@@ -33,6 +33,15 @@
     display: flex;
     justify-content: space-between;
   }
+
+  &__apply {
+    margin-bottom: var(--second-offset);
+    width: 100%;
+  }
+
+  &__more {
+    margin-top: var(--big-offset);
+  }
 }
 
 .catalog-list {
@@ -40,5 +49,97 @@
 
   &__item {
     grid-column: 3 span;
+  }
+}
+
+.catalog-filters {
+  border-radius: 4px;
+  padding: var(--second-offset);
+  background-color: var(--color-bg);
+
+  &__btns {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+.catalog-price {
+  &__wrapper {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+
+    &::before {
+      content: "";
+      position: absolute;
+      left: 50%;
+      top: 8px;
+      bottom: 8px;
+      width: 1px;
+      height: 34px;
+      background-color: var(--color-gray);
+      transform: translateX(-50%);
+    }
+  }
+
+  &__input {
+    border: 1px solid var(--color-gray);
+    width: 50%;
+    height: 50px;
+    font: var(--middle-book);
+    text-align: center;
+    color: var(--color-main);
+    background-color: transparent;
+
+    &:first-child {
+      border-right: none;
+      border-top-left-radius: 4px;
+      border-bottom-left-radius: 4px;
+    }
+
+    &:last-child {
+      border-left: none;
+      border-top-right-radius: 4px;
+      border-bottom-right-radius: 4px;
+    }
+  }
+
+  .noUi-horizontal {
+    height: 2px;
+  }
+
+  .noUi-target {
+    border: none;
+    box-shadow: none;
+    background-color: var(--color-main);
+  }
+
+  .noUi-connect {
+    background-color: var(--color-main);
+  }
+
+  .noUi-horizontal .noUi-handle {
+    top: -8px;
+    width: 3px;
+    height: 18px;
+  }
+
+  .noUi-handle {
+    right: 0;
+    border: none;
+    border-radius: 100px;
+    box-shadow: none;
+    background-color: var(--color-main);
+    cursor: pointer;
+  }
+
+  .noUi-handle::after,
+  .noUi-handle::before {
+    display: none;
+  }
+
+  .noUi-handle-lower {
+    right: -3px;
   }
 }
