--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,5 @@
 <section class="about">
+  <img src="img/about-figure.svg" alt="" class="about__figure" aria-hidden="true">
   <div class="container about__container">
     <div class="about__text">
       <h2 class="title about__title">Пара слов о нас</h2>
