--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,6 +5,10 @@
 @import "./components/hero";
 @import "./components/catalog";
 @import "./components/about";
+@import "./components/quiz";
+@import "./components/team";
+@import "./components/faq";
+@import "./components/contacts";
 
 // маленькие
 @import "./components/nav";
@@ -12,3 +16,4 @@
 @import "./components/logo";
 @import "./components/product";
 @import "./components/sizes";
+@import "./components/social";
