--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -224,3 +224,18 @@ a {
   visibility: visible;
   transform: translateY(0);
 }
+
+.input {
+  border: none;
+  border-radius: 4px;
+  padding: 0 var(--second-offset);
+  width: 100%;
+  height: 60px;
+  font: var(--middle-book);
+  color: var(--color-main);
+  background-color: var(--color-white);
+
+  &::placeholder {
+    color: var(--color-gray);
+  }
+}
