--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,6 +11,7 @@
 @import "./components/contacts";
 @import "./components/instagram";
 @import "./components/footer";
+@import "./components/prod-modal";
 
 // маленькие
 @import "./components/nav";
