--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -21,6 +21,74 @@
           </svg>
           <div class="cart__count">1</div>
         </button>
+        <div class="mini-cart">
+          <div class="mini-cart__top" data-simplebar>
+            <ul class="mini-cart__list list-reset">
+              <!-- <li class="mini-cart__item">
+                <article class="mini-cart__product mini-product">
+                  <div class="mini-product__image">
+                    <img src="img/product-image.jpg" alt="">
+                  </div>
+                  <div class="mini-product__content">
+                    <div class="mini-product__text">
+                      <h3 class="mini-product__title">Женские кроссовки Puma Force 1 Shadow</h3>
+                      <span class="mini-product__price">8 678 р</span>
+                    </div>
+                    <button class="btn-reset mini-product__delete" aria-label="Удалить товар">
+                      <svg>
+                        <use xlink:href="img/sprite.svg#trash"></use>
+                      </svg>
+                    </button>
+                  </div>
+                </article>
+              </li>
+              <li class="mini-cart__item">
+                <article class="mini-cart__product mini-product">
+                  <div class="mini-product__image">
+                    <img src="img/product-image.jpg" alt="">
+                  </div>
+                  <div class="mini-product__content">
+                    <div class="mini-product__text">
+                      <h3 class="mini-product__title">Женские кроссовки Puma Force 1 Shadow</h3>
+                      <span class="mini-product__price">8 678 р</span>
+                    </div>
+                    <button class="btn-reset mini-product__delete" aria-label="Удалить товар">
+                      <svg>
+                        <use xlink:href="img/sprite.svg#trash"></use>
+                      </svg>
+                    </button>
+                  </div>
+                </article>
+              </li>
+              <li class="mini-cart__item">
+                <article class="mini-cart__product mini-product">
+                  <div class="mini-product__image">
+                    <img src="img/product-image.jpg" alt="">
+                  </div>
+                  <div class="mini-product__content">
+                    <div class="mini-product__text">
+                      <h3 class="mini-product__title">Женские кроссовки Puma Force 1 Shadow</h3>
+                      <span class="mini-product__price">8 678 р</span>
+                    </div>
+                    <button class="btn-reset mini-product__delete" aria-label="Удалить товар">
+                      <svg>
+                        <use xlink:href="img/sprite.svg#trash"></use>
+                      </svg>
+                    </button>
+                  </div>
+                </article>
+              </li> -->
+            </ul>
+          </div>
+          <div class="mini-cart__bottom">
+            <div class="mini-cart__itog">
+              <span class="mini-cart__txt">Итого:</span>
+              <span class="mini-cart__summ">0 р</span>
+            </div>
+            <button class="btn-reset btn btn--primary mini-cart__btn" data-graph-path="cart-modal">Перейти в
+              корзину</button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
