--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,6 +12,7 @@
 @import "./components/instagram";
 @import "./components/footer";
 @import "./components/prod-modal";
+@import "./components/cart-modal";
 
 // маленькие
 @import "./components/nav";
