--- a/src/scss/components/_cart.scss
+++ b/src/scss/components/_cart.scss
@@ -1,4 +1,5 @@
 .cart {
+  position: relative;
   margin-left: var(--main-offset);
 
   &__btn {
@@ -11,6 +12,7 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      pointer-events: none;
     }
   }
 
@@ -27,5 +29,78 @@
     font: var(--small-book);
     color: var(--color-white);
     background-color: var(--color-accent);
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+    pointer-events: none;
+
+    &--visible {
+      opacity: 1;
+      transition: opacity 0.3s ease-in-out;
+    }
+  }
+}
+
+.mini-cart {
+  position: absolute;
+  right: 0;
+  top: calc(100% + 22px);
+  width: 480px;
+  box-shadow: 0 -4px 10px rgba(0, 13, 84, 0.1);
+  background-color: var(--color-white);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+
+  &__top {
+    max-height: 323px;
+
+    .simplebar-track.simplebar-vertical {
+      right: 5px;
+      top: 20px;
+      bottom: 20px;
+      border-radius: 5px;
+      width: 4px;
+      background: rgba(77, 77, 77, 0.1);
+    }
+
+    .simplebar-scrollbar::before {
+      left: 0;
+      right: auto;
+      border-radius: 5px;
+      width: 4px;
+      background: rgba(77, 77, 77, 0.2);
+      opacity: 1;
+    }
+  }
+
+  &__bottom {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: var(--second-offset);
+    box-shadow: 0 -4px 10px rgba(0, 13, 84, 0.1);
+    background-color: var(--color-white);
+  }
+
+  &__txt {
+    display: block;
+    margin-bottom: var(--small-offset);
+  }
+
+  &__summ {
+    font: var(--prehigh-regular);
+    font-weight: 700;
+    color: #4d4d4d;
+  }
+
+  &__btn {
+    padding-top: 14px;
+    padding-bottom: 14px;
+  }
+
+  &--visible {
+    opacity: 1;
+    visibility: visible;
+    transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
   }
 }
