--- a/src/partials/quiz.html
+++ b/src/partials/quiz.html
@@ -8,7 +8,18 @@
         <div class="quiz-questions">
 
         </div>
-        <div class="asd">sdfsdf</div>
+        <div class="last-question">
+          <div class="last-question__form">
+            <h3 class="last-question__title">Получить предложение</h3>
+            <p class="last-question__descr">Получите подборку подходящих для вас моделей на почту</p>
+            <input type="text" class="input last-question__input" placeholder="Ваше имя">
+            <input type="email" class="input last-question__input" placeholder="E-mail">
+            <button class="btn btn-reset btn--primary last-question__btn">Получить</button>
+            <div class="last-question__decorate">
+              <img src="img/iphone.png" alt="" aria-hidden="true">
+            </div>
+          </div>
+        </div>
       </form>
     </div>
   </div>
