--- a/src/scss/components/_cart.scss
+++ b/src/scss/components/_cart.scss
@@ -4,6 +4,7 @@
 
   &__btn {
     position: relative;
+    outline: none;
     width: 20px;
     height: 20px;
 
@@ -11,8 +12,30 @@
       display: block;
       width: 100%;
       height: 100%;
+      fill: var(--color-white);
       object-fit: cover;
+      transition: fill 0.3s ease-in-out;
       pointer-events: none;
+    }
+
+    &:focus {
+      svg {
+        fill: var(--color-accent);
+      }
+    }
+
+    @include desktop {
+      &:hover {
+        svg {
+          fill: var(--color-accent);
+        }
+      }
+    }
+
+    &:active {
+      svg {
+        fill: var(--color-accent-hover);
+      }
     }
   }
 
@@ -73,6 +96,12 @@
     }
   }
 
+  &__itog {
+    @include mobile {
+      margin-bottom: 20px;
+    }
+  }
+
   &__bottom {
     display: flex;
     align-items: center;
@@ -80,6 +109,10 @@
     padding: var(--second-offset);
     box-shadow: 0 -4px 10px rgba(0, 13, 84, 0.1);
     background-color: var(--color-white);
+
+    @include mobile {
+      flex-wrap: wrap;
+    }
   }
 
   &__txt {
@@ -96,11 +129,19 @@
   &__btn {
     padding-top: 14px;
     padding-bottom: 14px;
+
+    @include mobile {
+      width: 100%;
+    }
   }
 
   &--visible {
     opacity: 1;
     visibility: visible;
     transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+  }
+
+  @include mobile {
+    width: 290px;
   }
 }
