--- a/src/scss/components/_faq.scss
+++ b/src/scss/components/_faq.scss
@@ -1,9 +1,15 @@
+@import "../mixins";
+
 .faq {
   padding: var(--big-offset);
 
   &__list {
     margin: 0 auto;
     max-width: 880px;
+  }
+
+  @include mobile {
+    padding: 40px 0;
   }
 }
 
