--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,3 +1,5 @@
+@import "../mixins";
+
 .header {
   position: fixed;
   left: 0;
@@ -33,5 +35,15 @@
     display: flex;
     justify-content: flex-end;
     grid-column: 10 span;
+
+    @include mobile {
+      grid-column: 2 span;
+    }
+  }
+
+  &__nav {
+    @include tablet {
+      display: none;
+    }
   }
 }
