--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -1,3 +1,5 @@
+@import "../mixins";
+
 .hero {
   position: relative;
   padding: 130px 0;
@@ -27,6 +29,10 @@
     line-height: 200px;
     color: rgba(255, 255, 255, 0.12);
     transform: translate(-50%, -50%);
+
+    @include tablet {
+      display: none;
+    }
   }
 
   &__title {
@@ -36,6 +42,10 @@
     max-width: 50%;
     font: 700 36px / 140% var(--font-family);
     color: var(--color-white);
+
+    @include small-tablet {
+      max-width: none;
+    }
   }
 
   &__descr {
@@ -44,5 +54,14 @@
     max-width: calc(50% - 100px);
     font: var(--middle-book);
     color: var(--color-white);
+
+    @include small-tablet {
+      max-width: none;
+    }
+  }
+
+  @include small-tablet {
+    padding: 50px 0;
+    height: auto;
   }
 }
