--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -11,7 +11,42 @@
   }
 
   &__link {
+    position: relative;
+    outline: none;
     font: var(--small-book);
     color: var(--color-white);
+    transition: opacity 0.3s ease-in-out;
+
+    &::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      height: 1px;
+      background-color: currentColor;
+      transform: scaleX(0);
+      transform-origin: left;
+      transition: transform 0.3s ease-in-out;
+    }
+
+    &:focus {
+      &::before {
+        transform: scaleX(1);
+      }
+    }
+
+    @include desktop {
+      &:hover {
+        &::before {
+          transform: scaleX(1);
+        }
+      }
+    }
+
+    &:active {
+      opacity: 0.8;
+      transition: opacity 0.3s ease-in-out;
+    }
   }
 }
