--- a/src/scss/components/_social.scss
+++ b/src/scss/components/_social.scss
@@ -1,3 +1,5 @@
+@import "../mixins";
+
 .social {
   display: flex;
 
@@ -9,11 +11,13 @@
 
   &__link {
     display: block;
+    outline: none;
     width: 44px;
     height: 44px;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    transition: opacity 0.3s ease-in-out;
 
     &--vk {
       background-image: url("../img/vk.svg");
@@ -21,6 +25,20 @@
 
     &--insta {
       background-image: url("../img/insta.svg");
+    }
+
+    &:focus {
+      opacity: 0.7;
+    }
+
+    @include desktop {
+      &:hover {
+        opacity: 0.7;
+      }
+    }
+
+    &:active {
+      opacity: 0.9;
     }
   }
 }
