--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,3 +1,5 @@
+@import "./mixins";
+
 :root {
   // цвета
   --color-black: #000;
@@ -12,6 +14,7 @@
   --color-cameo: #dbbba9;
   --color-gray: #b2b5bb;
   --color-jumbo: #808080;
+  --color-btn-active: #8c2828;
 
   // отступы
   --grid-gap: 20px;
@@ -28,4 +31,14 @@
   --middle-book: 400 16px / 140% var(--font-family);
   --middle-regular: 600 16px / 140% var(--font-family);
   --small-book: 400 14px / 140% var(--font-family);
+}
+
+@include mobile {
+  :root {
+    --grid-gap: 10px;
+    --main-offset: 20px;
+    --second-offset: 14px;
+    --small-offset: 8px;
+    --big-offset: 30px;
+  }
 }
