--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -1,3 +1,5 @@
+@import "../mixins";
+
 .footer {
   padding: 28px 0;
   background-color: var(--color-main);
@@ -6,5 +8,31 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    @include tablet {
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+
+  &__nav {
+    .nav__list {
+      @include small-tablet {
+        flex-wrap: wrap;
+        justify-content: center;
+      }
+    }
+
+    .nav__item {
+      @include small-tablet {
+        margin-bottom: var(--small-offset);
+      }
+    }
+  }
+
+  &__left {
+    @include tablet {
+      margin-bottom: var(--second-offset);
+    }
   }
 }
