--- a/src/scss/components/_prod-modal.scss
+++ b/src/scss/components/_prod-modal.scss
@@ -1,3 +1,5 @@
+@import "../mixins";
+
 .prod-modal {
   border-radius: 4px;
   padding: var(--main-offset);
@@ -163,8 +165,10 @@
       object-fit: cover;
     }
 
-    &:hover {
-      opacity: 0.7;
+    @include desktop {
+      &:hover {
+        opacity: 0.7;
+      }
     }
 
     &--active {
