--- a/src/scss/components/_team.scss
+++ b/src/scss/components/_team.scss
@@ -1,3 +1,5 @@
+@import "../mixins";
+
 .team {
   position: relative;
   padding: var(--big-offset) 0;
@@ -17,6 +19,10 @@
     position: absolute;
     right: 0;
     top: 0;
+
+    @include small-tablet {
+      display: none;
+    }
   }
 
   &__item {
